# crisis-response-allocator

./: .env.example  .gitignore  README.md  __init__.py  mcp_server_mock.py  pyproject.toml
agents/: __init__.py  executor_agent.py  orchestrator.py  planner_agent.py
mcp_server/: package.json  server.ts  tsconfig.json
mcp_server/tools/: official_registry_tool.ts  web_search_tool.ts
models/: __init__.py  schemas.py
security/: __init__.py  injection_guard.py
tests/: conftest.py
tests/features/: crisis_response.feature
tests/features/steps/: crisis_steps.py
tests/step_defs/: __init__.py  test_crisis_response.py
